<resources>
    <string name="app_name">StajXml</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Sobsheniya</string>
    <string name="menu_gallery">Zakazi</string>
    <string name="menu_slideshow">Tarifi</string>
    <string name="menu_tools">Dobovit Obyavleniy</string>
    <string name="menu_share">O nas</string>
    <string name="menu_send">Send</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>
